Set theme jekyll-theme-minimal

--- a/_config.yml
+++ b/_config.yml
@@ -11,3 +11,5 @@ remote_theme: phlow/feeling-responsive
 # this is a comment
 
 show_excerpts: true # set to false to remove excerpts on the homepage
+
+theme: jekyll-theme-minimal
