--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ description: > # this means to ignore newlines until "baseurl:"
   Google search results) and in your feed.xml site description.
   
 
-theme: jekyll-theme-minimal
+#theme: jekyll-theme-minimal
 # this is a comment
 
 show_excerpts: true # set to false to remove excerpts on the homepage
